8242361: JavaFX Web View crashes with Segmentation Fault, when HTML contains Data-URIs

The code in WTF::scheduleDispatchFunctionsOnMainThread assumes, that
the java class com.sun.webkit.MainThread can be found be the JNI
function FindClass. This is only true if the class is loadable by the
system class loader.

One such case is when the OpenJFX modules are loaded from a new
ModuleLayer. To fix this, the reference to the class needs to be loaded
from when a JNI call from Java into native code is active. In that case
FindClass uses the classloader associated with that method.

The test code can be executed by running:

cd tests/manual/web/dataurl
../../../../gradlew run