modules/javafx.web/src/main/native/Source/WTF/wtf/java/MainThreadJava.cpp
@@ -31,25 +31,58 @@
 #include <wtf/RunLoop.h>
 
 namespace WTF {
+static JGClass jMainThreadCls;
+static jmethodID fwkIsMainThread;
+static jmethodID fwkScheduleDispatchFunctions;
+
 void scheduleDispatchFunctionsOnMainThread()
 {
     AttachThreadAsNonDaemonToJavaEnv autoAttach;
     JNIEnv* env = autoAttach.env();
-    static JGClass jMainThreadCls(env->FindClass("com/sun/webkit/MainThread"));
-
-    static jmethodID mid = env->GetStaticMethodID(
-            jMainThreadCls,
-            "fwkScheduleDispatchFunctions",
-            "()V");
-
-    ASSERT(mid);
-
-    env->CallStaticVoidMethod(jMainThreadCls, mid);
+    env->CallStaticVoidMethod(jMainThreadCls, fwkScheduleDispatchFunctions);
     WTF::CheckAndClearException(env);
 }
 
 void initializeMainThreadPlatform()
 {
+    // Initialize the class reference and methodids for the MainThread. The
+    // initilization has to be done from a context where the class
+    // com.sun.webkit.MainThread is accessible. When
+    // scheduleDispatchFunctionsOnMainThread is invoced, the system class loader
+    // would be used to locate the class, which fails if the JavaFX modules are
+    // not loaded from the boot module layer.
+    //
+    // initializeMainThreadPlatform is called through the chain:
+    // - com.sun.webkit.WebPage.WebPage
+    // - com.sun.webkit.WebPage.twkCreatePage
+    // - WTF::initializeMainThread
+    // - WTF::initializeMainThreadPlatform
+    //
+    // As we are invoked through JNI from java, the class loader, that loaded
+    // WebPage will be used by FindClass.
+    //
+    // WTF::initializeMainThread has a guard, so that initialization is only run
+
+    AttachThreadAsNonDaemonToJavaEnv autoAttach;
+    JNIEnv* env = autoAttach.env();
+
+    static JGClass jMainThreadRef(env->FindClass("com/sun/webkit/MainThread"));
+    jMainThreadCls = jMainThreadRef;
+
+    fwkIsMainThread = env->GetStaticMethodID(
+            jMainThreadCls,
+            "fwkIsMainThread",
+            "()Z");
+
+    ASSERT(fwkIsMainThread);
+
+    fwkScheduleDispatchFunctions = env->GetStaticMethodID(
+            jMainThreadCls,
+            "fwkScheduleDispatchFunctions",
+            "()V");
+
+    ASSERT(fwkScheduleDispatchFunctions);
+
 #if OS(WINDOWS)
     RunLoop::registerRunLoopMessageWindowClass();
 #endif
@@ -64,16 +97,7 @@ bool isMainThread()
 {
     AttachThreadAsNonDaemonToJavaEnv autoAttach;
     JNIEnv* env = autoAttach.env();
-    static JGClass jMainThreadCls(env->FindClass("com/sun/webkit/MainThread"));
-
-    static jmethodID mid = env->GetStaticMethodID(
-            jMainThreadCls,
-            "fwkIsMainThread",
-            "()Z");
-
-    ASSERT(mid);
-
-    jboolean isMainThread = env->CallStaticBooleanMethod(jMainThreadCls, mid);
+    jboolean isMainThread = env->CallStaticBooleanMethod(jMainThreadCls, fwkIsMainThread);
     WTF::CheckAndClearException(env);
     return isMainThread == JNI_TRUE;
 }
