tests/manual/web/dataurl/src/main/java/module-info.java
@@ -1,0 +1,10 @@
+
+
+module DataUrlWithModule {
+    requires javafx.controls;
+    requires javafx.media;
+    requires javafx.web;
+    requires javafx.graphics;
+    requires javafx.base;
+    exports dataurl.module;
+}
